various attempts to fix list alignment - failure thus far

--- a/fajitas.css
+++ b/fajitas.css
@@ -12,8 +12,4 @@
 }
 
 
-li {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 15px;
-    margin-left: auto;
-}
+  
